tests/sources/invalid/expressions/implicit_assign_undefined_receiver.fire
// Semantic error: implicit-declaration assignment ('y = ...' with no prior
// declaration) whose right-hand side is a method call on an undefined
// receiver identifier.

fn implicit_assign_undefined_receiver() -> void {
    y = undefinedReceiver.length();  //~ ERROR FS-PARSE-0003 @9
//~^ ERROR FS-PARSE-0003 @5
}
